v1.0.0/modules/schema/pages/class/MeterReading.adoc
= `MeterReading`
:toclevels: 4


+++Set of values obtained from the meter.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MeterReading`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MeterReading`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MeterReading {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CustomerAgreement {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



IntervalBlock {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Reading {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Meter {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MeterReading -> DateTimeInterval: valuesInterval


MeterReading -> CustomerAgreement: CustomerAgreement


MeterReading -> EndDeviceEvent: EndDeviceEvents


MeterReading -> UsagePoint: UsagePoint


MeterReading -> IntervalBlock: IntervalBlocks


MeterReading -> Reading: Readings


MeterReading -> Meter: Meter


MeterReading -> DiagramObject: DiagramObjects


MeterReading -> InstanceSet: InstanceSet


MeterReading -> Name: Names


MeterReading -> ChangeSetMember: PropertiesCIMDataObject


MeterReading -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<CustomerAgreement,`CustomerAgreement`>>
| 0..1
| xref::class/CustomerAgreement.adoc[`CustomerAgreement`]
| +++(could be deprecated in the future) Customer agreement for this meter reading.+++

| <<Meter,`Meter`>>
| 0..1
| xref::class/Meter.adoc[`Meter`]
| +++Meter providing this reading.+++

| <<UsagePoint,`UsagePoint`>>
| 0..1
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++Usage point from which this meter reading (set of values) has been obtained.+++

| <<isCoincidentTrigger,`isCoincidentTrigger`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, this meter reading is the meter reading for which other coincident meter readings are requested or provided.+++

| <<valuesInterval,`valuesInterval`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Date and time interval of the data items contained within this meter reading.+++

| <<EndDeviceEvents,`EndDeviceEvents`>>
| 0..*
| xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`]
| +++All end device events associated with this set of measured values.+++

| <<IntervalBlocks,`IntervalBlocks`>>
| 0..*
| xref::class/IntervalBlock.adoc[`IntervalBlock`]
| +++All interval blocks contained in this meter reading.+++

| <<Readings,`Readings`>>
| 0..*
| xref::class/Reading.adoc[`Reading`]
| +++All reading values contained within this meter reading.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#CustomerAgreement]
=== `CustomerAgreement`
+++(could be deprecated in the future) Customer agreement for this meter reading.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.CustomerAgreement`
| Cardinality
| 0..1
| Type
| xref::class/CustomerAgreement.adoc[`CustomerAgreement`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EndDeviceEvents]
=== `EndDeviceEvents`
+++All end device events associated with this set of measured values.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.EndDeviceEvents`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#IntervalBlocks]
=== `IntervalBlocks`
+++All interval blocks contained in this meter reading.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.IntervalBlocks`
| Cardinality
| 0..*
| Type
| xref::class/IntervalBlock.adoc[`IntervalBlock`]


|===

//[discrete]
[#isCoincidentTrigger]
=== `isCoincidentTrigger`
+++If true, this meter reading is the meter reading for which other coincident meter readings are requested or provided.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.isCoincidentTrigger`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#Meter]
=== `Meter`
+++Meter providing this reading.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.Meter`
| Cardinality
| 0..1
| Type
| xref::class/Meter.adoc[`Meter`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Readings]
=== `Readings`
+++All reading values contained within this meter reading.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.Readings`
| Cardinality
| 0..*
| Type
| xref::class/Reading.adoc[`Reading`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#UsagePoint]
=== `UsagePoint`
+++Usage point from which this meter reading (set of values) has been obtained.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.UsagePoint`
| Cardinality
| 0..1
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

//[discrete]
[#valuesInterval]
=== `valuesInterval`
+++Date and time interval of the data items contained within this meter reading.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.valuesInterval`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===


