v1.1.0/modules/schema/pages/class/MeterReading.adoc
= `MeterReading`
:toclevels: 4


+++Set of values obtained from the meter.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MeterReading`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MeterReading`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<CustomerAgreement,`CustomerAgreement`>>
//| [[slots_table.CustomerAgreement]]<<CustomerAgreement,`CustomerAgreement`>>
| 0..1 +
xref::class/CustomerAgreement.adoc[`CustomerAgreement`]
| +++(could be deprecated in the future) Customer agreement for this meter reading.+++
| _n/a_

| <<EndDeviceEvents,`EndDeviceEvents`>>
//| [[slots_table.EndDeviceEvents]]<<EndDeviceEvents,`EndDeviceEvents`>>
| 0..* +
xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`]
| +++All end device events associated with this set of measured values.+++
| _n/a_

| <<IntervalBlocks,`IntervalBlocks`>>
//| [[slots_table.IntervalBlocks]]<<IntervalBlocks,`IntervalBlocks`>>
| 0..* +
xref::class/IntervalBlock.adoc[`IntervalBlock`]
| +++All interval blocks contained in this meter reading.+++
| _n/a_

| <<Meter,`Meter`>>
//| [[slots_table.Meter]]<<Meter,`Meter`>>
| 0..1 +
xref::class/Meter.adoc[`Meter`]
| +++Meter providing this reading.+++
| _n/a_

| <<Readings,`Readings`>>
//| [[slots_table.Readings]]<<Readings,`Readings`>>
| 0..* +
xref::class/Reading.adoc[`Reading`]
| +++All reading values contained within this meter reading.+++
| _n/a_

| <<UsagePoint,`UsagePoint`>>
//| [[slots_table.UsagePoint]]<<UsagePoint,`UsagePoint`>>
| 0..1 +
xref::class/UsagePoint.adoc[`UsagePoint`]
| +++Usage point from which this meter reading (set of values) has been obtained.+++
| _n/a_

| <<isCoincidentTrigger,`isCoincidentTrigger`>>
//| [[slots_table.isCoincidentTrigger]]<<isCoincidentTrigger,`isCoincidentTrigger`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, this meter reading is the meter reading for which other coincident meter readings are requested or provided.+++
| _n/a_

| <<valuesInterval,`valuesInterval`>>
//| [[slots_table.valuesInterval]]<<valuesInterval,`valuesInterval`>>
| 0..1 +
xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Date and time interval of the data items contained within this meter reading.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#CustomerAgreement]
=== `CustomerAgreement`
+++(could be deprecated in the future) Customer agreement for this meter reading.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.CustomerAgreement`
| Cardinality
| 0..1
| Type
| xref::class/CustomerAgreement.adoc[`CustomerAgreement`]


|===

////
[.text-left]
--
<<slots_table.CustomerAgreement,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EndDeviceEvents]
=== `EndDeviceEvents`
+++All end device events associated with this set of measured values.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.EndDeviceEvents`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`]


|===

////
[.text-left]
--
<<slots_table.EndDeviceEvents,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#IntervalBlocks]
=== `IntervalBlocks`
+++All interval blocks contained in this meter reading.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.IntervalBlocks`
| Cardinality
| 0..*
| Type
| xref::class/IntervalBlock.adoc[`IntervalBlock`]


|===

////
[.text-left]
--
<<slots_table.IntervalBlocks,&#10548;>>
--
////


//[discrete]
[#isCoincidentTrigger]
=== `isCoincidentTrigger`
+++If true, this meter reading is the meter reading for which other coincident meter readings are requested or provided.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.isCoincidentTrigger`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isCoincidentTrigger,&#10548;>>
--
////


//[discrete]
[#Meter]
=== `Meter`
+++Meter providing this reading.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.Meter`
| Cardinality
| 0..1
| Type
| xref::class/Meter.adoc[`Meter`]


|===

////
[.text-left]
--
<<slots_table.Meter,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Readings]
=== `Readings`
+++All reading values contained within this meter reading.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.Readings`
| Cardinality
| 0..*
| Type
| xref::class/Reading.adoc[`Reading`]


|===

////
[.text-left]
--
<<slots_table.Readings,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#UsagePoint]
=== `UsagePoint`
+++Usage point from which this meter reading (set of values) has been obtained.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.UsagePoint`
| Cardinality
| 0..1
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.UsagePoint,&#10548;>>
--
////


//[discrete]
[#valuesInterval]
=== `valuesInterval`
+++Date and time interval of the data items contained within this meter reading.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MeterReading.valuesInterval`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

////
[.text-left]
--
<<slots_table.valuesInterval,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CustomerAgreement.adoc[`CustomerAgreement`] | xref::class/CustomerAgreement.adoc#MeterReadings[`MeterReadings`]



| xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`] | xref::class/EndDeviceEvent.adoc#MeterReading[`MeterReading`]



| xref::class/IntervalBlock.adoc[`IntervalBlock`] | xref::class/IntervalBlock.adoc#MeterReading[`MeterReading`]



| xref::class/Meter.adoc[`Meter`] | xref::class/Meter.adoc#MeterReadings[`MeterReadings`]



| xref::class/Reading.adoc[`Reading`] | xref::class/Reading.adoc#MeterReadings[`MeterReadings`]



| xref::class/UsagePoint.adoc[`UsagePoint`] | xref::class/UsagePoint.adoc#MeterReadings[`MeterReadings`]


|===

